# open-biohit-plus

./: .buildinfo  .gitignore  .gitlab-ci.yml  BiohitPipettorPlus.spec  LICENSE  README.md  api.html  bat.txt  deck_slot_labware.html  genindex.html  howtocreateadeck.html  index.html  objects.inv  operation.html  pipettor.html  py-modindex.html  pyproject.toml  requirements.txt  run-checks  run-formatting  run_workflow.py  search.html  searchindex.js  setup.cfg  troubleshooting.html  workflow.html
.doctrees/: api.doctree  deck_slot_labware.doctree  environment.pickle  howtocreateadeck.doctree  index.doctree  operation.doctree  pipettor.doctree  troubleshooting.doctree  workflow.doctree
.github/workflows/: build.yml  docs.yml
_modules/: index.html
_modules/biohit_pipettor_plus/deck_structure/: deck.html  slot.html
_modules/biohit_pipettor_plus/pipettor_plus/: pipettor_plus.html
_sources/: api.rst.txt  deck_slot_labware.rst.txt  howtocreateadeck.rst.txt  index.rst.txt  operation.rst.txt  pipettor.rst.txt  troubleshooting.rst.txt  workflow.rst.txt
docs/: api.rst  conf.py  deck_slot_labware.rst  howtocreateadeck.rst  index.rst  operation.rst  pipettor.rst  troubleshooting.rst  workflow.rst
examples/:  tip_management.json  Ca_crc_full_multi.py  Ca_crc_full_multi_old.py  Ca_crc_full_single.py  Calcium-curve-single.py  __init__.py  analyzeMeasurement.py  deck1.json  deck1.py  final_multi.py  finalising_position.py  finalising_position1.py  old_ca_crc_full.py  run_dry.py  run_workflow.py  upload_myrimager.py
src/: __init__.py  action.py  baseclass.py  control_json.py  deck.py  deck_.py  function_set_single.py  function_sets.py  function_sets_multi.py  function_sets_multi_old.py  labware.py  no__init__.py  pipettor.py  pipettor_plus.py  protocol.py  serializable.py  slot.py
src/biohit_pipettor/: __init__.py  abstract_pipettor.py  errors.py  pipettor.py  pipettor_simulator.py
src/biohit_pipettor/clr_wrapping/: System.pyi  clr_wrappers.py  instrument.py  instrument.pyi
src/biohit_pipettor/include/: InstrumentLib.xml
src/biohit_pipettor_plus/: Modul1.py  __init__.py  control_json.py  create_db.py  db.py  deck.py  deck_.py  errors.py  final_multi.py  finalising_position.py  function_sets.py  function_window.py  geometry.py  gui.py  gui2.py  labware.py  labware_.py  no__init__.py  old_function_set_multi.py  operation_builder.py  parameters.py  pipettor.py  pipettor_plus.py  position.py  run_dry.py  slot.py  verify_position_yourself.py  well_window.py  workflow.py  workflow_executor.py
src/biohit_pipettor_plus/GUI/: collapsible_frame.py  executioncontroloverlay.py  function_window.py  gui2.py  gui_dialogs.py  operationsession.py  ui_helper.py  well_window.py
src/biohit_pipettor_plus/deck_structure/: __init__.py  control_json.py  deck.py  position.py  serializable.py  slot.py
src/biohit_pipettor_plus/gui/: executioncontroloverlay.py  function_window.py  gui.py  gui2.py  gui_dialogs.py  ui_helper.py  well_window.py
src/biohit_pipettor_plus/gui2/: executioncontroloverlay.py  (+4 more)
src/tests/: create_and_safe_objects.py  restore_from_json.py  test1.py  test2.py  test_gui.py
tests/: smoke_test.py  test_real.py  test_simulation.py
(+41 files in other folders)
