[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "open-biohit-plus"
version = "0.0.1"
description = "Designed to be used with pipettor_package following similar structure to open-biohit"
authors = ["Advait Lath <advaitlath1@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "biohit_pipettor_plus", from = "src"}]
repository = "https://github.com/smartlab-network/open-biohit-plus"

[tool.poetry.scripts]
pipettor-gui = "biohit_pipettor_plus.gui.gui2:main"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
open-biohit = "^0.0.2"
pillow = "^11.3.0"
ttkbootstrap = "^1.10.0"
matplotlib = "~3.7.0"
kiwisolver = "~1.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^24.0.0"          # Auto-formats your code (spacing, quotes, etc.)
isort = "^5.13.0"           # Organizes your import statements
mypy = "^1.8.0"             # Checks type hints for bugs
pyproject-flake8 = "^7.0.0" # Lints code (finds style issues, unused vars)
sphinx = "^7.0.0"           # Generates HTML documentation


