[metadata]
name = biohit-pipettor
version = 0.0.1
author = Niklas Mertsch
author_email = niklas.mertsch@stud.uni-goettingen.de
description = Python interface to the InstrumentLib.dll provided by the device vendor

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
include_package_data = True
install_requires =
    pythonnet==3.0.0a2

[options.packages.find]
where = src

[options.extras_require]
dev =
    black
    isort
    mypy
    pyproject-flake8
    pytest
docs =
    sphinx
simulation =
    matplotlib

[options.package_data]
biohit_pipettor = py.typed
biohit_pipettor.include = InstrumentLib.dll
